--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,10 @@
     border-radius: 3px;
     flex: 1 0;
     margin-top: 10px;
+    background-color: var(--user-profile-overlay-background);
 }
 
-.vc-bactivities-controls [class^="vc-activities-caret-"] {
+.vc-bactivities-controls [class*="vc-activities-caret-"] {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -56,21 +57,21 @@
     background-color: #ffffff4d;
 }
 
-.vc-bactivities-controls [class^="vc-activities-caret-"].disabled {
+.vc-bactivities-controls [class*="vc-activities-caret-"].disabled {
     cursor: not-allowed;
     opacity: 0.3;
 }
 
-.vc-bactivities-controls [class^="vc-activities-caret-"]:hover:not(.disabled) {
-    background: var(--background-modifier-accent);
+.vc-bactivities-controls [class*="vc-activities-caret-"]:hover:not(.disabled) {
+    background: var(--input-border-default, var(--input-border));
 }
 
-.vc-bactivities-controls .carousel {
+.vc-bactivities-controls .vc-bactivities-controls-carousel {
     display: flex;
     align-items: center;
 }
 
-.vc-bactivities-controls .carousel .dot {
+.vc-bactivities-controls .vc-bactivities-controls-carousel .vc-bactivities-controls-dot {
     margin: 0 4px;
     width: 10px;
     cursor: pointer;
@@ -81,15 +82,15 @@
     opacity: 0.6;
 }
 
-.vc-bactivities-controls .carousel .dot:hover:not(.selected) {
+.vc-bactivities-controls .vc-bactivities-controls-carousel .vc-bactivities-controls-dot:hover:not(.vc-bactivities-controls-selected) {
     opacity: 1;
 }
 
-.vc-bactivities-controls .carousel .dot.selected {
+.vc-bactivities-controls .vc-bactivities-controls-carousel .vc-bactivities-controls-dot.vc-bactivities-controls-selected {
     opacity: 1;
     background: var(--dot-color, var(--brand-500));
 }
 
 .vc-bactivities-controls-tooltip {
-    --background-floating: var(--background-secondary);
+    --background-floating: var(--background-secondary-alt);
 }
